feat: student overall performance (#24)
* feat: student overall performance
Jira: KLVN-588

* refactor: use Days and GroupType, rename score to learningOutcome
