# src/types/index.ts
@@ -7,5 +7,6 @@
 export type UUID = string;
 
 export type Days = 7 | 30 | 365;
+export type GroupType = 'above' | 'meets' | 'below' | 'all';
 
 export * from './entity';
